--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 
-		<title>page</title>
+		<title>vnnh</title>
 
 		<link rel="icon" type="image/png" href="/favicon.png" />
-		<link rel="stylesheet" href="./global.css" />
+		<link rel="stylesheet" href="/public/global.css" />
 
 		<script defer src="./build/bundle.js"></script>
 	</head>
