--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,13 @@
 		<title>vnnh</title>
 
 		<link rel="icon" type="image/png" href="/favicon.png" />
-		<link rel="stylesheet" href="/public/global.css" />
-
-		<script defer src="./build/bundle.js"></script>
+		<link rel="stylesheet" href="./global.css" />
+		<link rel="stylesheet" href="./style.css" />
 	</head>
 
 	<body>
 		<div class="root" id="root"></div>
+		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<script type="module" src="scripts/index.js"></script>
 	</body>
 </html>
