--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
 		<title>vnnh</title>
 
 		<link rel="icon" type="image/png" href="/favicon.png" />
-		<link rel="stylesheet" href="./global.css" />
-		<link rel="stylesheet" href="./style.css" />
+		<link rel="stylesheet" href="/src/global.css" />
 	</head>
 
 	<body>
 		<div class="root" id="root"></div>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<script type="module" src="scripts/index.js"></script>
+		<script type="module" src="/src/index.tsx"></script>
 	</body>
 </html>
